# profundo

./: Cargo.toml  README.md
src/: db.rs  embed.rs  export.rs  harvest.rs  lib.rs  main.rs  openrouter.rs  recall.rs  session.rs  stats.rs
